--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "h5py>=3.14.0",
     "hydra-core>=1.3.2",
+    "mlflow>=3.4.0",
     "omegaconf>=2.3.0",
     "pandas>=2.2.3",
     "torch>=2.7.0",
